.build/config/istio-vs-gw.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations: {}
  name: PROJECT_NAME-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - GATEWAY_HOST
    port:
      name: http
      number: 80
      protocol: HTTP

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations: {}
  name: PROJECT_NAME-gateway-vs
  namespace: default
spec:
  gateways:
  - PROJECT_NAME-gateway
  hosts:
  - GATEWAY_HOST
  http:
  - route:
    - destination:
        host: PROJECT_NAME.default.svc.cluster.local
        port:
          number: 3000
      weight: 100
